# basilevs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
assets/json/: level1.json
assets/json/test/: test_level_loader.json
include/: Emitter.cpp  Emitter.h  assets.h  background.h  basilevs-lib.h  basilevs.h  basilevs_player.h  behaviours.h  blueprints.h  bulletpool.h  bullets.h  components.h  config.h  core.h  emitter_.h  enemy.h  initialization.h  input.h  level-loader.h  spawn.h  sprite.h  state_handling.h  world.h
include/behaviours/: background.h  enemy.h  player.h
lib/: Background.cpp  BasilevsPlayer.cpp  BulletPool.cpp  CMakeLists.txt  Emitter.cpp  Enemy.cpp  Spawn.cpp  World.cpp  basilevs-lib.cpp  basilevs_player.cpp  bullets.cpp  initialization.cpp  level-loader.cpp  sprite.cpp  world.cpp
test/: CMakeLists.txt  test_blueprints.cpp  test_json_loader.cpp
